<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityAsyncTask">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

                <TextView
                    android:id="@+id/operation_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/operations"
                    android:textAlignment="center"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/result_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textAlignment="center"
                    android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/seven"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/eight"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/nine"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/plus"
                    android:textSize="48sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/four"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/five"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/six"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/minus"
                    android:textSize="48sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/one"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/two"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/three"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/multiply"
                    android:textSize="48sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="2"
                    android:onClick="myClickHandler"
                    android:text="@string/zero"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_clr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/clr"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_divide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/divide"
                    android:textSize="48sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:enabled="true"
                    android:onClick="previousActivity"
                    android:text="@string/back" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/next" />
        </TableRow>
</TableLayout>