<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/op_res"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/operation_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/operations"
            android:textAlignment="center"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/result"
            android:textAlignment="center"
            android:textSize="34sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/nums_ops"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/line_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/seven"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/eight"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/nine"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/plus"
                    android:textSize="48sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/four"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/five"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/six"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/minus"
                    android:textSize="48sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/one"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/two"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/three"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/multiply"
                    android:textSize="48sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="2"
                    android:onClick="myClickHandler"
                    android:text="@string/zero"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_clr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/clr"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button_divide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:onClick="myClickHandler"
                    android:text="@string/divide"
                    android:textSize="48sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_switch_activity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/back" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:onClick="nextActivity"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>